<resources>
    <string name="app_name">MyFlexibleFragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_im_home_fragment">Hello! i\'m home fragment</string>
    <string name="clik_me_to_go_to_category">Move to Category Fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_im_category_fragment">Hello! i\'m category fragment</string>
    <string name="click_me_to_go_to_detail_category">Move to Detail Category Fragment</string>
    <string name="move_data_with_bundle">Move Data with Bundle</string>
    <string name="move_data_with_getter_and_setter">Move Data with Getter and Setter</string>
    <string name="move_to_profile_activity">Move to Profile Activity</string>
    <string name="show_dialog">Show Dialog</string>
    <string name="champions">Club yang menjuarai premiere league tahun 2020 adalah..</string>
    <string name="manchester_united">Manchester United</string>
    <string name="liverpool">Liverpool</string>
    <string name="chelsea">Chelsea</string>
    <string name="manchester_city">Manchester City</string>
    <string name="close">Tutup</string>
    <string name="choose">Pilih</string>
</resources>