<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".DetailCategoryFragment">

    <TextView
        android:id="@+id/tv_category_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/move_data_with_bundle"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_category_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/move_data_with_getter_and_setter"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:fontFamily="@font/poppins_medium"
        android:padding="10dp"
        android:text="@string/move_to_profile_activity"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_show_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:padding="10dp"
        android:text="@string/show_dialog"
        android:textSize="18sp" />

</LinearLayout>