<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".OptionDialogFragment">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/champions"
        android:textColor="#535050"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/rg_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rb_mun"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/manchester_united"
                android:textColor="#535050"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rb_liv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/liverpool"
                android:textColor="#535050"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rb_che"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/chelsea"
                android:textColor="#535050"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rb_mci"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/manchester_city"
                android:textColor="#535050"
                android:textSize="16sp" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_close"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginEnd="4dp"
                android:text="@string/close"
                android:textColor="#000000"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_choose"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginStart="4dp"
                android:text="@string/choose"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>